Update Display data

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     </header>
 
     <section id="img-section">
-        <div class="img-container">
+        <!-- <div class="img-container">
             <img class="dog-img" src="./images/dog-teddy.jpg" alt="teddy">
             <h2 class="name">teddy, 30</h2>
             <p class="greeting">How you doin ?</p>
             <img class="like-status" src="./images/badge-like.png" alt="like-img">
             <img class="nope-status" src="./images/badge-nope.png" alt="like-img">
-        </div>
-        <div class="btn-container">
+        </div> -->
+        <!-- <div class="btn-container">
             <button class="nope-btn">
                 <img src="./images/icon-cross.png" alt="nope-btn">
             </button>
             <button class="like-btn">
                 <img src="./images/icon-heart.png" alt="like-btn">
             </button>
-        </div>
+        </div> -->
     </section>
 
 
