completed Tindog Project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Header -->
     <header>
         <nav>
             <img class="profile-img" src="./images/icon-profile.png" alt="profile">
@@ -18,24 +19,28 @@
             <img class="chat-img" src="./images/icon-chat.png" alt="">
         </nav>
     </header>
-
+    <!-- Img Section -->
     <section id="img-section">
-        <!-- <div class="img-container">
-            <img class="dog-img" src="./images/dog-teddy.jpg" alt="teddy">
-            <h2 class="name">teddy, 30</h2>
-            <p class="greeting">How you doin ?</p>
-            <img class="like-status" src="./images/badge-like.png" alt="like-img">
-            <img class="nope-status" src="./images/badge-nope.png" alt="like-img">
-        </div> -->
-        <!-- <div class="btn-container">
-            <button class="nope-btn">
-                <img src="./images/icon-cross.png" alt="nope-btn">
-            </button>
-            <button class="like-btn">
-                <img src="./images/icon-heart.png" alt="like-btn">
-            </button>
-        </div> -->
+        <div class="img-container">
+            
+        </div>
     </section>
+
+    <!-- Status -->
+    
+    <div class="status-container">
+        <img class="like-status" src="./images/badge-like.png" alt="like-img">
+        <img class="nope-status" src="./images/badge-nope.png" alt="like-img"> 
+    </div>
+    <!-- Btn Container -->
+    <div class="btn-container">
+        <button class="nope-btn">
+            <img src="./images/icon-cross.png" alt="nope-btn">
+        </button>
+        <button class="like-btn">
+            <img src="./images/icon-heart.png" alt="like-btn">
+        </button>
+    </div>
 
 
     <script type="module" src="index.js"></script>
